Add hero section with responsive and improve header section

--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
     </style>
   </head>
   <body class="h-screen bg-[#F5FFF6]">
+    <!-- Header Section -->
     <header class="bg-white py-6">
       <nav
-        class="flex flex-col sm:flex-row justify-between items-center max-w-[75rem] mx-auto lg:px-[3.75rem] px-5 gap-5 sm:gap-0">
+        class="flex flex-col sm:flex-row justify-between items-center max-w-7xl mx-auto px-3 sm:px-6 xl:px-0 gap-5 sm:gap-0">
         <!-- Logo -->
         <a href="#" class="flex items-center gap-2.5">
           <img class="w-[50px]" src="./assets/logo.png" alt="website logo" />
@@ -84,5 +85,20 @@
         </div>
       </nav>
     </header>
+    <!-- Hero Section -->
+    <section
+      class="bg-linear-90 from-[#013223] from-0% via-[#006747] via-50% to-[#013223] to-100%">
+      <div
+        class="max-w-7xl mx-auto px-3 sm:px-6 xl:px-0 py-5 flex flex-col items-center gap-3 text-white">
+        <figure class="w-[92px]">
+          <img src="./assets/logo-dark.png" alt="Logo Dark" />
+        </figure>
+        <h1 class="font-semibold text-[2.5rem]">জরুরি সেবা ডিরেক্টরি</h1>
+        <p class="text-xl text-center">
+          Government Emergency Services at Your Fingertip – A Project by
+          Government of the People’s Republic of Bangladesh
+        </p>
+      </div>
+    </section>
   </body>
 </html>
